# tevere-datasource

./: main.py  pyproject.toml
queries/dbpedia.org/: battle-abstract.rq  battle-commander.rq  battle-date-property.rq  battle-date.rq  battle-excludes.rq  battle-label.rq  battle-parent.rq  battle-point.rq  battle-primary_topic.rq  battle-subject.rq  commander-abstract.rq  commander-label.rq  commander-primary_topic.rq  place-label.rq  place-latlon.rq  place-point.rq  subject-label.rq
queries/ja.dbpedia.org/: battle-date-property.rq  battle-excludes.rq  battle-place.rq  battle-redirect.rq  battle-sameAs.rq  battle-year.rq  battles.rq  commander-redirect.rq  place-redicrect.rq
queries/query.wikidata.org/: battle-date.rq
queries/wikidata.dbpedia.org/: battle-endDate.rq  battle-startDate.rq
