[tool.poetry]
name = "tevere-datasource"
version = "0.1.0"
description = ""
authors = ["Fumiya Kubota <fumiya.kubota@glucose.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
sparqlwrapper = "^1.8.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
